# Learn-OpenGL

./: CMakeLists.txt  README.md
includes/LearnOpenGL/: shader_s.h
src/: glad.c  paper.cpp
src/1.start/1.1.helloWindow/: helloWindow.cpp
src/1.start/1.2.helloTriangle/: helloTriangle.cpp
src/1.start/1.3.shader/: shader_class.cpp  shader_interpolation.cpp  shader_uniform.cpp
